2019-01-08 2.1.1 Dmytro Nozdrin <public.team.osi@gmail.com>
    * Fixed translations.
    * Added change to the ChangeLog.

2019-12-25 2.1.0 Dmytro Nozdrin <public.team.osi@gmail.com>
    * Version for TYPO3 9.5 and 8.7.

2017-11-21 2.0.0 Christian Riesche <christian.riesche@dmk-ebusiness.de>
    * Version for TYPO3 7.6 and 8.7.

2014-06-18 1.0.1 Klaus Bitto <klaus@netcreators.nl>
	* Updated extension icon for new Netcreators CI.

2014-06-18 1.0.0 Klaus Bitto <klaus@netcreators.nl>
	* Version for TYPO3 6.2.

2014-06-12 0.6.2 Gautam Kok <gautam@netcreators.nl>
    * Replaced t3lib_htmlmail by Swift mailer for TYPO3 6.1 compatibility.
    * Added change to the ChangeLog.
    * Incremented revision number to 0.6.2.
        * (I skipped 0.6.1 due to fixes of introduced bugs in that version).

2013-06-12 0.6.0 Klaus Bitto <klaus@netcreators.com>
	* Added a third choice "This is not what I was looking for", with optional feedback form.
	* The user's rating is now stored with the user's comment and included in the feedback email.
	* Incremented minor version number to 0.6.0.

2013-03-07 0.5.2 Klaus Bitto <klaus@netcreators.com>
	* Fixed TCA->locallang_db.xml link for comments, so the comments table will have a title.
	* Improved clarity of page ratings and comments table titles.
	* Added change to the ChangeLog.
	* Incremented revision number to 0.5.2.

2013-03-05 0.5.1 Klaus Bitto <klaus@netcreators.com>
	* Fixed TypoScript setup: comment e-mail settings had slipped into the PageController::ratedAction namespace.
		Should be in the CommentController::createAction namespace.
	* Changed comment e-mail: Now the author's name and e-mail address as well as the Page URL are included in the body.
	* Added validity checks for comment author and recipient e-mail addresses.
	* Changed comment form: Labels for name and e-mail fields no longer enclose the referenced text field.
	* Added change to the ChangeLog.
	* Incremented revision number to 0.5.1.
